--- a/bot.html
+++ b/bot.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>chatbot</title>
     <link rel="stylesheet" href="bot.css">
 </head>
-<header class="header">AI Chatbot</header>
-<div class="top"></div>
 
-    <div class="Box">
-   <div class="message">Hi</div>
-   <div class="message">I am Bot</div>
+<body>
+    <header class="header">AI Chatbot</header>
+    <div class="top"></div>
 
-   <div class="reply">Hello</div>
-   <div class="reply">I want your help </div>
-    
-   <textarea class="input" placeholder="Chat With Me"></textarea>
-   <button id="click">Send</button>
-    <div class="container">
-        <div class="dot dot1"></div>
-        <div class="dot dot1"></div>
-        <div class="dot dot1"></div>
+    <div class="Box hidden">
+        <div class="botNav">
+            <button class="hideBot">X</button>
+        </div>
+        <div class="message">Hi</div>
+        <div class="message">I am Bot</div>
+
+        <div class="reply">Hello</div>
+        <div class="reply">I want your help </div>
+
+        <textarea class="input" placeholder="Chat With Me"></textarea>
+        <button id="click">Send</button>
+        <div class="container">
+            <div class="dot dot1"></div>
+            <div class="dot dot1"></div>
+            <div class="dot dot1"></div>
+        </div>
     </div>
-  </div>
-</html>
+    <button class="showBot"><img src="./assets/icons/message-square.svg" alt="✉"></button>
 
+    <script src="./bot.js"></script>
+</body>
+
+</html>
